jar + readme