@@ -2,3 +2,9 @@
 **TELECOM Nancy - 06/01 au 10/01**
 
 Les instructions sur l'organisation et les attendus de la semaine se trouve dans le fichier [INSTRUCTIONS.md](./INSTRUCTIONS.md).
+
+## Execution
+
+Faire cette commande à la racine de ce projet :
+
+``` java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -jar grp25.jar ```
